--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
     <meta property="og:description" content="A curated list of NZB indexer sources and resources for Usenet." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://hampelmen.github.io/nzb-sources/" />
-    <meta property="og:image" content="https://captian-jack-cola.github.io/nzb-sources/preview.png" />
+    <meta property="og:image" content="https://hampelmen.github.io/nzb-sources/preview.png" />
     <meta property="og:site_name" content="NZB Sources" />
+
+    <meta name="theme-color" content="#5865F2" />
 
     <!-- Optional: Twitter card too -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="NZB Sources – Usenet Indexer List" />
     <meta name="twitter:description" content="A curated list of NZB indexer sources and resources for Usenet." />
-    <meta name="twitter:image" content="https://captian-jack-cola.github.io/nzb-sources/preview.png" />
+    <meta name="twitter:image" content="https://hampelmen.github.io/nzb-sources/preview.png" />
 
   </head>
   <body class="bg-base-100 text-base-content">
